--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,6 +31,32 @@
         <%# 部分テンプレートでそのユーザーが投稿したプロトタイプ投稿一覧を表示する %>
         <%= render partial: "prototypes/prototype" , collection: @prototypes %>
       </div>
+      <h2 class="page-heading">
+        <%= "#{@user.name}さんがいいねしたプロトタイプ" %>　
+      </h2>
+      <div class="user__card">
+      <% current_user.like_prototypes.each do |prototype| %>
+        <div class="card">
+          <%= link_to image_tag(prototype.image, class: :card__img),  prototype_path(prototype.id), method: :get %>
+      <div class="card__body">
+    <%= link_to "#{prototype.title}", prototype_path(prototype.id), class: :card__title%>
+    <p class="card__summary">
+      <%= "#{prototype.catch_copy}" %>
+    </p>
+    <%= link_to "by #{prototype.user.name}", user_path(prototype.user), class: :card__user %>
+  </div>
+   <div class="card_link">
+      <i class="fa fa-heart unlike-btn fa-2x"></i>
+      <%= prototype.likes.count %>
+      <%= link_to "いいね", prototype_path(prototype.id), class:"like" %>
+
+      <i class="fa fa-comment-o fa-2x"></i>
+      <%= prototype.comments.count %>
+      <%= link_to "コメント", prototype_path(prototype.id),  class:"comment" %>
+    </div>
+</div>
+      <% end %>
+      </div>
     </div>
   </div>
 </div>
