--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -30,30 +30,33 @@
           </p>
         </div>
       </div>
+      <div id="likes_buttons<%= @prototype.id %>">
+        <%= render partial: 'likes/like', locals: {prototype: @prototype, like: @like} %>
+      </div>
       <div class="prototype__comments">
         <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
         <% if user_signed_in? %>
-           <%= form_with model: [@prototype, @comment],local: true do |f|%>
+          <%= form_with model: [@prototype, @comment], local: false do |f|%>
             <div class="field">
-               <%= f.label :text, "コメント" %><br />
-               <%= f.text_field :text, id:"comment_text" %>
+              <%= f.label :text, "コメント" %><br />
+              <%= f.text_field :text, id:"comment_text" %>
             </div>
             <div class="actions">
-               <%= f.submit "送信する", class: :form__btn  %>
+              <%= f.submit "送信する", class: :form__btn  %>
             </div>
-           <% end %> 
+          <% end %>
         <% end %>
         <%# // ログインしているユーザーには上記を表示する %>
-        <ul class="comments_lists">
+        <div class="comments_lists" id="comments">
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
           <% @comments.each do |comment| %>
-            <li class="comments_list">
+            <div class="comments_list">
               <%= comment.text %>
-              <%= link_to comment.user.name, user_path(@prototype.user), class: :comment_user %>
-          <% end %>
-            </li>
+              <%= comment.user.name %>
+            </div>
+         <% end %>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
-        </ul>
+        </div>
       </div>
     </div>
   </div>
